@@ -27,7 +27,8 @@
             <fanart>resources/fanart.jpg</fanart>
         </assets>
         <news>v0.12.2 (09/06/2021)
-            [fix] drm license url fix (livestreams)
+            [fix] drm for restart
+            [fix] drm livestream license url
             [fix] better quality selection handling for livestreams
         </news>
     </extension>
